# posit.io

./: .doxygenrc  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Makefile  README.md  demo.cpp  main.cpp  poc.cpp  posit.cpp  posit.h  posit.hpp  posit_test.cpp  positd.cpp
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.scripts/: setup.sh
demo/: client.c  client.h  server.cpp  server.h  server.hpp
scripts/: setup.sh
